[gd_scene load_steps=2 format=3 uid="uid://blxonpuumhciy"]

[ext_resource type="Script" path="res://src/Menu/MainMenu.gd" id="1_4epyi"]

[node name="Game" type="Node3D"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.083
anchor_bottom = 0.84
offset_right = 9.38391
offset_bottom = 2.67999
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4epyi")

[node name="Join" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.038
anchor_right = 0.03
anchor_bottom = 0.038
offset_left = -5.71
offset_top = 51.214
offset_right = 98.29
offset_bottom = 82.214
text = "Join"

[node name="Host" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 136.0
offset_bottom = 56.0
text = "Host"

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="MainMenu"]
_spawnable_scenes = PackedStringArray("res://src/Scenes/PlayerScenes/PlayerScene.tscn")
spawn_path = NodePath("../../MultiplayerLobby/Map/Players")

[node name="Start" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.038
anchor_right = 0.03
anchor_bottom = 0.038
offset_left = 426.29
offset_top = 547.214
offset_right = 554.29
offset_bottom = 618.214
text = "Start Game"

[node name="SteamName" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138
anchor_top = 0.193
anchor_right = 0.138
anchor_bottom = 0.193
offset_left = -21.466
offset_top = -81.571
offset_right = 106.534
offset_bottom = -50.571

[node name="LobbyList" type="PopupPanel" parent="MainMenu"]
mode = 1
initial_position = 2
size = Vector2i(700, 450)
visible = true

[node name="Panel" type="Panel" parent="MainMenu/LobbyList"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyListLabel" type="Label" parent="MainMenu/LobbyList/Panel"]
layout_mode = 0
offset_right = 592.0
offset_bottom = 292.0
text = "Lobby List"

[node name="CloseLobbyList" type="Button" parent="MainMenu/LobbyList/Panel"]
layout_mode = 0
offset_left = 500.0
offset_top = 400.0
offset_right = 632.0
offset_bottom = 431.0
text = "Close Lobby List"

[node name="LobbyListScroll" type="ScrollContainer" parent="MainMenu/LobbyList/Panel"]
layout_mode = 0
offset_top = 20.0
offset_right = 570.0
offset_bottom = 310.0

[node name="LobbyListVBOX" type="VBoxContainer" parent="MainMenu/LobbyList/Panel/LobbyListScroll"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="Chat" type="Panel" parent="MainMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 408.0
offset_right = 264.0
offset_bottom = 588.0

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu/Chat"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Send" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 272.0
offset_top = 600.0
offset_right = 319.0
offset_bottom = 635.0
text = "Send"

[node name="TextEdit" type="TextEdit" parent="MainMenu/Send"]
layout_mode = 0
offset_left = -264.0
offset_right = -14.0
offset_bottom = 35.0
scale = Vector2(1.01007, 0.970458)
text = "asd"

[node name="MultiplayerLobby" type="Node3D" parent="."]
visible = false

[node name="Map" type="Node3D" parent="MultiplayerLobby"]

[node name="Sun" type="DirectionalLight3D" parent="MultiplayerLobby/Map"]
transform = Transform3D(1, 0, 0, 0, -0.5, 0.866026, 0, -0.866026, -0.5, 0, 25, -9)
shadow_enabled = true

[node name="Players" type="Node3D" parent="MultiplayerLobby/Map"]

[node name="CSGBox3D" type="CSGBox3D" parent="MultiplayerLobby/Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
size = Vector3(19, 1, 11)
metadata/_edit_group_ = true

[node name="Podium1" type="CSGCylinder3D" parent="MultiplayerLobby/Map/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1, -3)
radius = 2.0
height = 4.0

[node name="Podium2" type="CSGCylinder3D" parent="MultiplayerLobby/Map/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -3)
radius = 2.0
height = 4.0

[node name="Podium3" type="CSGCylinder3D" parent="MultiplayerLobby/Map/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -3)
radius = 2.0
height = 4.0

[node name="Podium4" type="CSGCylinder3D" parent="MultiplayerLobby/Map/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, -3)
radius = 2.0
height = 4.0

[node name="MainCam" type="Camera3D" parent="MultiplayerLobby"]
transform = Transform3D(-1, -8.74228e-08, 4.43028e-14, -8.50428e-08, 0.972776, 0.231747, -2.026e-08, 0.231747, -0.972776, 0, 10, -17.975)
fov = 54.9623

[connection signal="pressed" from="MainMenu/Join" to="MainMenu" method="_on_join_pressed"]
[connection signal="pressed" from="MainMenu/Host" to="MainMenu" method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/Start" to="MainMenu" method="_on_start_pressed"]
